refactor tests for JDBC